--- a/style/newCommon.less
+++ b/style/newCommon.less
@@ -1751,6 +1751,10 @@ white-space: nowrap;
   background:#FF9900;
   color: #fff;
 }
+.new-blue-button.red {
+  background:red;
+  color: #fff;
+}
 .new-search-con {
   display: flex;
   flex-wrap: wrap;
